{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 1962,
  "lineage": "cc89c956-75e4-592d-0ba6-e7dbdcb8ff10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:812765131777:internet-gateway/igw-06cfdb96ab652380f",
            "id": "igw-06cfdb96ab652380f",
            "owner_id": "812765131777",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_id": "vpc-0cbb7cab46af450a8"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:812765131777:loadbalancer/app/mvws920230322162415891900000009/33d6a1f11515bc24",
            "arn_suffix": "app/mvws920230322162415891900000009/33d6a1f11515bc24",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mvws920230322162415891900000009-1034447562.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:812765131777:loadbalancer/app/mvws920230322162415891900000009/33d6a1f11515bc24",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mvws920230322162415891900000009",
            "name_prefix": "mvws9",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08efca39c676b3230"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05318dbb2408939cc"
              },
              {
                "subnet_id": "subnet-0eac41b60a03063eb"
              }
            ],
            "subnets": [
              "subnet-05318dbb2408939cc",
              "subnet-0eac41b60a03063eb"
            ],
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_id": "vpc-0cbb7cab46af450a8",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:812765131777:listener/app/mvws920230322162415891900000009/33d6a1f11515bc24/c7e6ab4e36ffa1a1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:812765131777:targetgroup/mvws920230322162413815700000007/236c26ddf003eda8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:812765131777:listener/app/mvws920230322162415891900000009/33d6a1f11515bc24/c7e6ab4e36ffa1a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:812765131777:loadbalancer/app/mvws920230322162415891900000009/33d6a1f11515bc24",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.http",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:812765131777:targetgroup/mvws920230322162413815700000007/236c26ddf003eda8",
            "arn_suffix": "targetgroup/mvws920230322162413815700000007/236c26ddf003eda8",
            "connection_termination": false,
            "deregistration_delay": "0",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:812765131777:targetgroup/mvws920230322162413815700000007/236c26ddf003eda8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mvws920230322162413815700000007",
            "name_prefix": "mvws9",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cbb7cab46af450a8"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06cfdb96ab652380f",
            "id": "r-rtb-06e01efaf2037a4c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e01efaf2037a4c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:812765131777:route-table/rtb-06e01efaf2037a4c7",
            "id": "rtb-06e01efaf2037a4c7",
            "owner_id": "812765131777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cfdb96ab652380f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multiverse-public"
            },
            "tags_all": {
              "Name": "multiverse-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb7cab46af450a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a933c686f9362035",
            "route_table_id": "rtb-06e01efaf2037a4c7",
            "subnet_id": "subnet-05318dbb2408939cc"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da435751f4d56ac8",
            "route_table_id": "rtb-06e01efaf2037a4c7",
            "subnet_id": "subnet-0eac41b60a03063eb"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:812765131777:security-group/sg-08efca39c676b3230",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e0c05f5e9745660c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-08efca39c676b3230",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mvws9-alb20230322162413810600000006",
            "name_prefix": "mvws9-alb",
            "owner_id": "812765131777",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "multiverse-alb"
            },
            "tags_all": {
              "Name": "multiverse-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb7cab46af450a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:812765131777:security-group/sg-0e0c05f5e9745660c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0e0c05f5e9745660c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08efca39c676b3230"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mvws9-ec220230322162413819500000008",
            "name_prefix": "mvws9-ec2",
            "owner_id": "812765131777",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "multiverse-ec2"
            },
            "tags_all": {
              "Name": "multiverse-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb7cab46af450a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_from_web_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1968217028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08efca39c676b3230",
            "security_group_rule_id": "sgr-00108661da888fb29",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ec2_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-1491961771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08efca39c676b3230",
            "security_group_rule_id": "sgr-03d63cd596dad16f9",
            "self": false,
            "source_security_group_id": "sg-0e0c05f5e9745660c",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_from_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-521867787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e0c05f5e9745660c",
            "security_group_rule_id": "sgr-0f21ae45b4243e4b1",
            "self": false,
            "source_security_group_id": "sg-08efca39c676b3230",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_to_web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-159284375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e0c05f5e9745660c",
            "security_group_rule_id": "sgr-0bcc2b1f8e213f81a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:812765131777:subnet/subnet-05318dbb2408939cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05318dbb2408939cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812765131777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multiverse-1"
            },
            "tags_all": {
              "Name": "multiverse-1"
            },
            "vpc_id": "vpc-0cbb7cab46af450a8"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:812765131777:subnet/subnet-0eac41b60a03063eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eac41b60a03063eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812765131777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multiverse-2"
            },
            "tags_all": {
              "Name": "multiverse-2"
            },
            "vpc_id": "vpc-0cbb7cab46af450a8"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:812765131777:vpc/vpc-0cbb7cab46af450a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032471e04f7ea85fb",
            "default_route_table_id": "rtb-018dd1fc73939a397",
            "default_security_group_id": "sg-00f0745381e007bdb",
            "dhcp_options_id": "dopt-0923123a3cc42f421",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cbb7cab46af450a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-018dd1fc73939a397",
            "owner_id": "812765131777",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:812765131777:vpc-endpoint/vpce-00be859a75d684ca4",
            "cidr_blocks": [
              "52.95.150.0/24",
              "52.95.191.0/24",
              "52.95.142.0/23",
              "16.12.16.0/23",
              "3.5.244.0/22",
              "52.219.219.0/24",
              "52.95.144.0/24",
              "52.95.148.0/23",
              "16.12.15.0/24"
            ],
            "id": "vpce-00be859a75d684ca4",
            "owner_id": "812765131777",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ca54015",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06e01efaf2037a4c7"
            ],
            "service_name": "com.amazonaws.eu-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0cbb7cab46af450a8"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}